<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4B3E3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:text="@string/textview"
        android:textColor="#3E2723"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/firstNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_number"
        android:inputType="numberDecimal"
        android:textColorHint="#3E2723"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/secondNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/second_number"
        android:inputType="numberDecimal"
        android:textColorHint="#3E2723"
        android:textSize="24sp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/asd"
        android:textSize="34sp"
        app:rippleColor="#856D6D"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/ghata"
        android:textSize="34sp"
        app:rippleColor="#987979"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/guna"
        android:textSize="34sp"
        app:rippleColor="#987979"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:text="@string/bhaag"
        android:textSize="34sp"
        app:rippleColor="#987979"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/clc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:minHeight="32dp"
        android:text="@string/clc"
        android:textSize="34sp"
        app:rippleColor="#937575"
        tools:ignore="VisualLintButtonSize,VisualLintBounds" />

</LinearLayout>